installing libraries (Hilt, Detekt, ktlint)